--- a/ui/ui.html
+++ b/ui/ui.html
@@ -20,15 +20,9 @@
       <th>Age</th>
       <th>Manage</th>
     </tr>
-    <tr>
-      <td class="1">1</td>
-      <td class="1">Jerome</td>
-      <td class="1">20</td>
-      <td><a class="w3-btn w3-indigo w3-small w3-round" id="1" onclick="updatePerson(this.id);"><i class="fa fa-pencil"></i> Edit</a> <a class="w3-btn w3-red w3-small w3-round" onclick="deletePerson();"><i class="fa fa-trash"></i> Delete</a></td>
-    </tr>
   </table>
 </div>
-  
+
   <div class="w3-bar" style="margin-top:50px;">
    <a class="w3-btn w3-blue w3-round w3-margin w3-bar-item" onclick="addPeople();"><i class="fa fa-plus-circle"></i> Add</a>
    <input class="w3-input w3-bar-item w3-round w3-border w3-margin" placeholder="Name" id="name">
@@ -40,6 +34,10 @@
 
 
 <script>
+var tcount = 0;
+var scount;
+var nname , nage;
+
  var config = {
  	headers: {
  		'Content-Type': 'application/json'
@@ -66,9 +64,13 @@
     if(response.status == 200) {
     	swal({timer: 1500,showConfimButton:false,title: "Success",text:"Added people successfully",type: 'success'});
     	// remove textbox values
-    	document.getElementById('thread').innerHTML += '<tr class="w3-animate-opacity"><td>2</td><td>'+name+'</td><td>'+age+'</td><td><a class="w3-btn w3-indigo w3-small w3-round"><i class="fa fa-pencil"></i> Edit</a> <a class="w3-btn w3-red w3-round w3-small"><i class="fa fa-trash"></i> Delete</a></td></tr>'; 
+    	document.getElementById('thread').innerHTML += '<tr class="w3-animate-opacity"><td>1</td><td class="'+tcount+'">'+name+'</td><td class="'+tcount+'">'+age+'</td><td><a class="w3-btn w3-indigo w3-small w3-round" id="'+tcount+'" onclick="updatePerson(this.id);"><i class="fa fa-pencil"></i> Edit</a> <a class="w3-btn w3-red w3-small w3-round" onclick="deletePerson();"><i class="fa fa-trash"></i> Delete</a></td></tr>';
     	document.getElementById('name').value = "";
- 	    document.getElementById('age').value = "";  
+ 	    document.getElementById('age').value = "";
+      scount = tcount;
+      tcount++;
+
+
     }
   })
   .catch(function (error) {
@@ -81,16 +83,28 @@ function updatePerson(td) {
   var table_items = document.getElementsByClassName(td);
   for(var i=0;i < table_items.length;i++){
   	var x = table_items[i].innerText;
-  	table_items[i].innerHTML = '<input type="text" value="'+x+'" name="1">';
+  	table_items[i].innerHTML = '<input type="text" value="'+x+'" name="'+scount+'" title="'+scount+'" onkeyup="catchValue(this.value,this.title);">';
   }
   var edit_btn = document.getElementById(td);
   edit_btn.innerHTML = '<i class="fa fa-calendar"></i> Update';
+  // second sequence updating..
   edit_btn.onclick = function() {
-  	var cell = document.getElementsByName(td);
-  	
-     for (var i =0; i < table_items.length; i++) {
-     	table_items[i].innerHTML = cell[0].value;
-     }
+
+  var cell = document.getElementsByClassName(td);
+  table_items[0].innerText = nname;
+  table_items[1].innerText = nage;
+
+
+    //make an HTTP put request
+    axios({
+     method: 'put',
+     url: '/updatePerson',
+     data: {
+     "name":nname,
+     "age": nage
+  }
+});
+
      edit_btn.innerHTML='<i class="fa fa-pencil"></i> Edit'
     edit_btn.onclick = function(){updatePerson(td);}
   }
@@ -119,5 +133,15 @@ function deletePerson() {
     swal('Deleted!','you have remove a person from the table.','success')
   }
 })
+}
+
+// more skillz
+function catchValue(data,count) {
+ if(count == 0) {
+   nname = data;
+ }
+if(count == 1) {
+  nage = data;
+}
 }
 </script>
