--- a/ui/ui.html
+++ b/ui/ui.html
@@ -131,6 +131,7 @@ function deletePerson(td) {
      "age": document.getElementsByClassName(td)[1].innerHTML
   }
 });
+  location.reload();
     swal('Deleted!','you have remove a person from the table.','success')
   }
 })
